openshift/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rh-quiz
  labels:
    app: rh-quiz
    app.kubernetes.io/name: rh-quiz
    app.kubernetes.io/component: server
spec:
  selector:
    app: rh-quiz
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
